# EasyPR

./: CMakeLists.txt  a.txt  build.sh  demo  tags
include/easypr/: api.hpp  config.h
include/easypr/core/: feature.h  plate_judge.h  plate_locate.h
include/easypr/util/: kv.h  util.h
src/core/: chars_identify.cpp  chars_segment.cpp  core_func.cpp  feature.cpp  plate_detect.cpp  plate_judge.cpp  plate_locate.cpp  plate_recognize.cpp
src/train/: svm_train.cpp
src/util/: kv.cpp
test/: main.cpp  plate.hpp
